# px4_basics_control

./: .gitignore  README.md
src/aruco_land/: CMakeLists.txt  package.xml
src/aruco_land/src/: aruco_vision_node.cpp  landing_node.cpp
src/basic_control/: CMakeLists.txt  package.xml
src/basic_control/src/: mission_node.cpp  offboard_master.cpp  takeoff_landing.cpp
src/log/: latest_list
src/manual_bridges/: CMakeLists.txt  package.xml
src/manual_bridges/src/: gz_caminfo_bridge.cpp  gz_img_bridge.cpp
