<?xml version="1.0"?>
<package format="3">
  <name>manual_bridges</name>
  <version>0.0.1</version>
  <description>Manual gz → ros2 image bridge</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <build_depend>gz-msgs9</build_depend>
  <exec_depend>gz-msgs9</exec_depend>

  <build_depend>gz-transport13</build_depend>
  <exec_depend>gz-transport13</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
